# fmidi

./: CMakeLists.txt  README.md
cmake/: ExtraCompilerFlags.cmake
man/: fmidi-convert.1  fmidi-grep.1  fmidi-play.1  fmidi-read.1  fmidi-seq.1
programs/: common.h  midi-convert.cc  midi-grep.cc  midi-play.cc  midi-read.cc  midi-seq.cc  midi-test-write.cc  playlist.cc  playlist.h  xmi-convert.cc  xmi-read.cc
sources/fmidi/: fmidi.h  fmidi_file.cc  fmidi_internal.cc  fmidi_internal.h  fmidi_player.cc  fmidi_seq.cc  fmidi_util.cc  fmidi_util.h  u_iterator.cc  u_iterator.h  u_memstream.cc  u_memstream.h  u_stdio.cc  u_stdio.h
sources/fmidi/file/: identify.cc  read_mus.cc  read_smf.cc  read_xmi.cc  write_smf.cc
tools/: mini.py
